# envire-envire_urdf

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  EnvireLoader.hpp  GraphLoader.cpp  GraphLoader.hpp  Main.cpp  Robot.cpp  Robot.hpp  VisualRegistration.cpp  envire_urdf.xml
test/: CMakeLists.txt  test_robot.cpp
viz/: CMakeLists.txt  URDF_Visual.cpp  URDF_Visual.hpp  envire_urdf-viz.pc.in  vizkit_plugin.rb
